--- a/Breeze/Breeze.vbproj
+++ b/Breeze/Breeze.vbproj
@@ -57,21 +57,30 @@
     <Reference Include="GameShardsCoreBETA">
       <HintPath>..\..\..\..\Visual Studio 2010\Projects\GameShardsCoreBETA-FrameWork3.5-v0.0.0.1\bin\Debug\GameShardsCoreBETA.dll</HintPath>
     </Reference>
+    <Reference Include="GameShardsCoreSFML">
+      <HintPath>..\..\GameShardsCoreSFML\GameShardsCoreSFML\bin\Debug\GameShardsCoreSFML.dll</HintPath>
+    </Reference>
+    <Reference Include="Gwen, Version=3.0.6001.172, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Gwen.3.0.6001.172\lib\net40\Gwen.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="NAudio">
       <HintPath>..\..\..\..\..\Desktop\Gameshards\Librerie\NAudio\NAudio.dll</HintPath>
     </Reference>
     <Reference Include="NAudio.WindowsMediaFormat">
       <HintPath>..\..\..\..\..\Desktop\Gameshards\Librerie\NAudio\NAudio.WindowsMediaFormat.dll</HintPath>
     </Reference>
-    <Reference Include="sfmlnet-audio-2">
-      <HintPath>bin\Debug\sfmlnet-audio-2.dll</HintPath>
+    <Reference Include="sfmlnet-audio-2, Version=2.2.0.0, Culture=neutral, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\Desktop\Gameshards\Librerie\SFML.NET\x86\lib\sfmlnet-audio-2.dll</HintPath>
     </Reference>
-    <Reference Include="sfmlnet-graphics-2, Version=2.1.0.0, Culture=neutral, processorArchitecture=x86">
+    <Reference Include="sfmlnet-graphics-2, Version=2.2.0.0, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\..\Desktop\Gameshards\Librerie\SFML.NET\x86\lib\sfmlnet-graphics-2.dll</HintPath>
     </Reference>
-    <Reference Include="sfmlnet-system-2">
-      <HintPath>bin\Debug\sfmlnet-system-2.dll</HintPath>
+    <Reference Include="sfmlnet-system-2, Version=2.2.0.0, Culture=neutral, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\Desktop\Gameshards\Librerie\SFML.NET\x86\lib\sfmlnet-system-2.dll</HintPath>
     </Reference>
     <Reference Include="sfmlnet-window-2, Version=2.1.0.0, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
@@ -88,6 +97,13 @@
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Net.Http" />
+    <Reference Include="Tao.OpenGl, Version=2.1.0.12, Culture=neutral, PublicKeyToken=1ca010269a4501ef, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\Desktop\Gameshards\Librerie\SFML.NET\TGUI.NET\lib\x86\Tao.OpenGl.dll</HintPath>
+    </Reference>
+    <Reference Include="Tao.OpenGl.ExtensionLoader">
+      <HintPath>..\..\..\..\..\Desktop\Gameshards\Librerie\SFML.NET\TGUI.NET\lib\x86\Tao.OpenGl.ExtensionLoader.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Import Include="Microsoft.VisualBasic" />
@@ -107,6 +123,12 @@
     <Compile Include="Block.vb">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="BlocksForm.Designer.vb">
+      <DependentUpon>BlocksForm.vb</DependentUpon>
+    </Compile>
+    <Compile Include="BlocksForm.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="CheckPoint.vb">
       <SubType>Component</SubType>
     </Compile>
@@ -114,10 +136,14 @@
     <Compile Include="Item.vb">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="LevelEditor.vb" />
+    <Compile Include="LevelSelect.vb" />
     <Compile Include="Ligth.vb">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="Module1.vb" />
+    <Compile Include="MainBackbone.vb" />
+    <Compile Include="MainGame.vb" />
+    <Compile Include="MainMenu.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
@@ -135,6 +161,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="BlocksForm.resx">
+      <DependentUpon>BlocksForm.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="My Project\Resources.resx">
       <Generator>VbMyResourcesResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.vb</LastGenOutput>
@@ -156,6 +185,10 @@
       <LastGenOutput>Settings.Designer.vb</LastGenOutput>
     </None>
     <None Include="App.config" />
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
