--- a/Breeze/Breeze.vbproj
+++ b/Breeze/Breeze.vbproj
@@ -147,6 +147,12 @@
     </Compile>
     <Compile Include="Level.vb" />
     <Compile Include="LevelEditor.vb" />
+    <Compile Include="LevelEditorForm.Designer.vb">
+      <DependentUpon>LevelEditorForm.vb</DependentUpon>
+    </Compile>
+    <Compile Include="LevelEditorForm.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="LevelSelect.vb" />
     <Compile Include="Ligth.vb">
       <SubType>Component</SubType>
@@ -176,6 +182,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="BlocksForm.resx">
       <DependentUpon>BlocksForm.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="LevelEditorForm.resx">
+      <DependentUpon>LevelEditorForm.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="My Project\Resources.resx">
       <Generator>VbMyResourcesResXFileCodeGenerator</Generator>
