--- a/Breeze/Breeze.vbproj
+++ b/Breeze/Breeze.vbproj
@@ -147,10 +147,10 @@
     </Compile>
     <Compile Include="Level.vb" />
     <Compile Include="LevelEditor.vb" />
-    <Compile Include="LevelEditorForm.Designer.vb">
-      <DependentUpon>LevelEditorForm.vb</DependentUpon>
+    <Compile Include="GameShards Breeze.Designer.vb">
+      <DependentUpon>GameShards Breeze.vb</DependentUpon>
     </Compile>
-    <Compile Include="LevelEditorForm.vb">
+    <Compile Include="GameShards Breeze.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="LevelSelect.vb" />
@@ -183,8 +183,8 @@
     <EmbeddedResource Include="BlocksForm.resx">
       <DependentUpon>BlocksForm.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="LevelEditorForm.resx">
-      <DependentUpon>LevelEditorForm.vb</DependentUpon>
+    <EmbeddedResource Include="GameShards Breeze.resx">
+      <DependentUpon>GameShards Breeze.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="My Project\Resources.resx">
       <Generator>VbMyResourcesResXFileCodeGenerator</Generator>
