--- a/Breeze/Breeze.vbproj
+++ b/Breeze/Breeze.vbproj
@@ -51,18 +51,15 @@
     <OptionInfer>On</OptionInfer>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationManifest>My Project\app.manifest</ApplicationManifest>
+    <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="GameShardsCoreBETA">
       <HintPath>..\..\..\..\Visual Studio 2010\Projects\GameShardsCoreBETA-FrameWork3.5-v0.0.0.1\bin\Debug\GameShardsCoreBETA.dll</HintPath>
     </Reference>
-    <Reference Include="GameShardsCoreSFML">
+    <Reference Include="GameShardsCoreSFML, Version=0.0.10.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\GameShardsCoreSFML\GameShardsCoreSFML\bin\Debug\GameShardsCoreSFML.dll</HintPath>
-    </Reference>
-    <Reference Include="Gwen, Version=3.0.6001.172, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Gwen.3.0.6001.172\lib\net40\Gwen.dll</HintPath>
-      <Private>True</Private>
     </Reference>
     <Reference Include="NAudio">
       <HintPath>..\..\..\..\..\Desktop\Gameshards\Librerie\NAudio\NAudio.dll</HintPath>
@@ -97,13 +94,6 @@
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Net.Http" />
-    <Reference Include="Tao.OpenGl, Version=2.1.0.12, Culture=neutral, PublicKeyToken=1ca010269a4501ef, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\Desktop\Gameshards\Librerie\SFML.NET\TGUI.NET\lib\x86\Tao.OpenGl.dll</HintPath>
-    </Reference>
-    <Reference Include="Tao.OpenGl.ExtensionLoader">
-      <HintPath>..\..\..\..\..\Desktop\Gameshards\Librerie\SFML.NET\TGUI.NET\lib\x86\Tao.OpenGl.ExtensionLoader.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Import Include="Microsoft.VisualBasic" />
@@ -194,6 +184,7 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.manifest" />
     <None Include="My Project\app.manifest">
       <SubType>Designer</SubType>
     </None>
@@ -206,11 +197,12 @@
       <CustomToolNamespace>My</CustomToolNamespace>
       <LastGenOutput>Settings.Designer.vb</LastGenOutput>
     </None>
-    <None Include="App.config" />
-    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="bin\Debug\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
