--- a/Breeze/Breeze.vbproj
+++ b/Breeze/Breeze.vbproj
@@ -128,25 +128,18 @@
     <Compile Include="BlocksForm.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="CheckPoint.vb">
-      <SubType>Component</SubType>
-    </Compile>
+    <Compile Include="CheckPoint.vb" />
     <Compile Include="GameStates.vb" />
-    <Compile Include="Item.vb">
-      <SubType>Component</SubType>
-    </Compile>
+    <Compile Include="IEntity.vb" />
+    <Compile Include="IItemTicker.vb" />
     <Compile Include="Level.vb" />
     <Compile Include="LevelEditor.vb" />
     <Compile Include="GameShards Breeze.Designer.vb">
       <DependentUpon>GameShards Breeze.vb</DependentUpon>
     </Compile>
-    <Compile Include="GameShards Breeze.vb">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="GameShards Breeze.vb" />
     <Compile Include="LevelSelect.vb" />
-    <Compile Include="Ligth.vb">
-      <SubType>Component</SubType>
-    </Compile>
+    <Compile Include="Ligth.vb" />
     <Compile Include="MainBackbone.vb" />
     <Compile Include="MainGame.vb" />
     <Compile Include="MainMenu.vb" />
@@ -165,6 +158,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="Player.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="BGForm.resx">
