--- a/Breeze/Breeze.vbproj
+++ b/Breeze/Breeze.vbproj
@@ -131,6 +131,7 @@
     <Compile Include="CheckPoint.vb" />
     <Compile Include="GameStates.vb" />
     <Compile Include="IEntity.vb" />
+    <Compile Include="IEntityTicker.vb" />
     <Compile Include="IItemTicker.vb" />
     <Compile Include="Level.vb" />
     <Compile Include="LevelEditor.vb" />
@@ -158,6 +159,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="Particle.vb" />
     <Compile Include="Player.vb" />
   </ItemGroup>
   <ItemGroup>
