--- a/Breeze/Breeze.vbproj
+++ b/Breeze/Breeze.vbproj
@@ -67,6 +67,9 @@
     <Reference Include="NAudio.WindowsMediaFormat">
       <HintPath>..\..\..\..\..\Desktop\Gameshards\Librerie\NAudio\NAudio.WindowsMediaFormat.dll</HintPath>
     </Reference>
+    <Reference Include="NCalc">
+      <HintPath>..\..\..\..\..\Desktop\Gameshards\Librerie\Utility\NCalc.dll</HintPath>
+    </Reference>
     <Reference Include="sfmlnet-audio-2, Version=2.2.0.0, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\..\Desktop\Gameshards\Librerie\SFML.NET\x86\lib\sfmlnet-audio-2.dll</HintPath>
@@ -119,9 +122,7 @@
     <Compile Include="BGForm.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Block.vb">
-      <SubType>Component</SubType>
-    </Compile>
+    <Compile Include="Block.vb" />
     <Compile Include="BlocksForm.Designer.vb">
       <DependentUpon>BlocksForm.vb</DependentUpon>
     </Compile>
@@ -133,6 +134,7 @@
     <Compile Include="IEntity.vb" />
     <Compile Include="IEntityTicker.vb" />
     <Compile Include="IItemTicker.vb" />
+    <Compile Include="IStaticObject.vb" />
     <Compile Include="Level.vb" />
     <Compile Include="LevelEditor.vb" />
     <Compile Include="GameShards Breeze.Designer.vb">
