--- a/Breeze/My Project/Settings.settings
+++ b/Breeze/My Project/Settings.settings
@@ -5,5 +5,11 @@
     <Setting Name="UnlockedLevel" Type="System.Byte" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
+    <Setting Name="SoundVolume" Type="System.Byte" Scope="User">
+      <Value Profile="(Default)">100</Value>
+    </Setting>
+    <Setting Name="MusicVolume" Type="System.Byte" Scope="User">
+      <Value Profile="(Default)">100</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
