--- a/Breeze/Breeze.vbproj
+++ b/Breeze/Breeze.vbproj
@@ -54,8 +54,8 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="GameShardsCoreBETA">
-      <HintPath>..\..\..\..\Visual Studio 2010\Projects\GameShardsCoreBETA-FrameWork3.5-v0.0.0.1\bin\Debug\GameShardsCoreBETA.dll</HintPath>
+    <Reference Include="GameShardsCore2">
+      <HintPath>..\..\GameShardsCore2\GameShardsCore2\bin\Debug\GameShardsCore2.dll</HintPath>
     </Reference>
     <Reference Include="GameShardsCoreSFML, Version=0.0.10.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -66,9 +66,6 @@
     </Reference>
     <Reference Include="NAudio.WindowsMediaFormat">
       <HintPath>..\..\..\..\..\Desktop\Gameshards\Librerie\NAudio\NAudio.WindowsMediaFormat.dll</HintPath>
-    </Reference>
-    <Reference Include="NCalc">
-      <HintPath>..\..\..\..\..\Desktop\Gameshards\Librerie\Utility\NCalc.dll</HintPath>
     </Reference>
     <Reference Include="sfmlnet-audio-2, Version=2.2.0.0, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
@@ -130,11 +127,13 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="CheckPoint.vb" />
+    <Compile Include="CollisionEngine.vb" />
     <Compile Include="GameStates.vb" />
     <Compile Include="IEntity.vb" />
     <Compile Include="IEntityTicker.vb" />
     <Compile Include="IItemTicker.vb" />
-    <Compile Include="IStaticObject.vb" />
+    <Compile Include="IMovableObject.vb" />
+    <Compile Include="InGameOptions.vb" />
     <Compile Include="Level.vb" />
     <Compile Include="LevelEditor.vb" />
     <Compile Include="GameShards Breeze.Designer.vb">
@@ -182,6 +181,7 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="app.manifest" />
     <None Include="My Project\app.manifest">
       <SubType>Designer</SubType>
